[project]
name = "student-login"
version = "0.1.0"
description = ""
authors = [
    {name = "talha309",email = "tiseoexpert@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "uvicorn (>=0.34.0,<0.35.0)",
    "fastapi[all] (>=0.115.11,<0.116.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "passlib (>=1.7.4,<2.0.0)",
    "pymongo (>=4.11.2,<5.0.0)",
    "python-dotenv (>=1.0.1,<2.0.0)",
    "alembic (>=1.15.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
